# Ansible-Module-HyperStack-Cloud

./: .ansible-lint  .flake8  .gitignore  .yamllint  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  integration-tests.yml  lint.yml  release.yml  tests.yml
docs/implementation-plan/: 001-setup.md  002-Implementation-of-Enviroments.md  003-Firewall.md  004-managing-complex-objects.md
hyperstack/ansible_collections/hyperstack/cloud/: CHANGELOG.md  README.md  galaxy.yml
hyperstack/ansible_collections/hyperstack/cloud/docs/: code-style-and-guide.md
hyperstack/ansible_collections/hyperstack/cloud/meta/: runtime.yml
hyperstack/ansible_collections/hyperstack/cloud/plugins/modules/: cloud_manager.py  instance.py  instance_info.py
hyperstack/ansible_collections/hyperstack/cloud/tests/: conftest.py  pytest.ini
hyperstack/ansible_collections/hyperstack/cloud/tests/integration/: inventory
hyperstack/ansible_collections/hyperstack/cloud/tests/integration/targets/cloud_manager_env/tasks/: main.yml
hyperstack/ansible_collections/hyperstack/cloud/tests/integration/targets/cloud_manager_firewall/tasks/: main.yml
hyperstack/ansible_collections/hyperstack/cloud/tests/integration/targets/cloud_manager_vm_failure/tasks/: main.yml
hyperstack/ansible_collections/hyperstack/cloud/tests/integration/targets/instance_info/tasks/: main.yml
hyperstack/ansible_collections/hyperstack/cloud/tests/output/bot/: ansible-test-sanity-pep8.json  ansible-test-sanity-pylint.json  ansible-test-sanity-shebang.json
hyperstack/ansible_collections/hyperstack/cloud/tests/unit/plugins/modules/: test_cloud_manager.py  test_instance.py  test_instance_info.py
missions/: 000-introduction.md  001-setup-plan.md  002-implementing-environments.md  003-implementing-firewall.md  004-managing-complex-objects.md  005-finalizing-collection.md  006-local-ci-testing.md  007-fix-cloud-manager-tests.md  008-fix-cloud-manager-tests.md  009-fix-ci-git-submodule-error.md  010-cloud-provider-integration-testing.md  011-vm-instance-management-enhancement.md
tests/: README.md  integration_test_cloud_provider.yml
